spicevmc: don't disconnect on "cancel"

spicevmc was designed so its _finish functions should always be called;
With the gtask integration both _finish functions are trying to
disconnect the GCancellable even in the 'cancel' context which leads to
a deadlock as explained in the documentation.

Resolves: https://bugs.freedesktop.org/show_bug.cgi?id=95032
Acked-by: Jonathon Jongsma <jjongsma@redhat.com>